--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ textarea{
   white-space: pre-wrap;
 }
 
-.time-block{
+.timeblock{
   text-align: center;
   border-radius: 15px;
 }
@@ -36,7 +36,8 @@ textarea{
   border-top: 1px solid white;;
 }
 
-.hour {
+.timestamp {
+  padding-top: 30px;
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
@@ -63,6 +64,10 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+}
+
+.saveBtn:hover {
+  background-color: aquamarine;
 }
 
 .saveBtn i:hover {
